--- a/Tex/src/Template.tex
+++ b/Tex/src/Template.tex
@@ -1,4 +1,10 @@
 \section{Template}
-テンプレートである
 
+\subsection{テンプレート}
 \lstinputlisting{../Template.cpp}
+
+\subsection{emacs設定ファイル}
+\lstinputlisting{../.emacs}
+
+\subsection{vim設定ファイル}
+%\lstinputlisting{../.vimrc}
