--- a/Tex/Library.tex
+++ b/Tex/Library.tex
@@ -32,7 +32,7 @@
 }
 
 \title{Primasta　チームライブラリ}
-\author{asi1024, primenumber TakiTakiTakise}
+\author{asi1024, primenumber, TakiTakiTakise}
 \date{\today}
 
 \begin{document}
