--- a/Tex/src/Geometry.tex
+++ b/Tex/src/Geometry.tex
@@ -1,3 +1,10 @@
 \section{Geometry}
 
+\subsection{基本セット}
 \lstinputlisting{../Geometry/Geometry.cpp}
+
+\subsection{交点}
+\lstinputlisting{../Geometry/Intersect.cpp}
+
+\subsection{凸包}
+\lstinputlisting{../Geometry/Convex.cpp}
