--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -1,3 +1,8 @@
 \section{Math}
 
+\subsection{基本セット}
 \lstinputlisting{../Math/Math.cpp}
+
+\subsection{行列}
+\lstinputlisting{../Math/Matrix.cpp}
+\lstinputlisting{../Math/SquareMatrix.cpp}
