--- a/Tex/src/Others.tex
+++ b/Tex/src/Others.tex
@@ -1,3 +1,13 @@
 \section{Others}
 
+\subsection{座標圧縮}
 \lstinputlisting{../Others/Compressor.cpp}
+
+\subsection{サイコロ}
+六面体サイコロ
+\lstinputlisting{../Others/Dice.cpp}
+八面体サイコロ
+\lstinputlisting{../Others/RegularOctahedron.cpp}
+
+\subsection{最長増加部分列}
+\lstinputlisting{../Others/LIS.cpp}
