--- a/Tex/src/Template.tex
+++ b/Tex/src/Template.tex
@@ -8,3 +8,7 @@
 
 \subsection{vim設定ファイル}
 %\lstinputlisting{../.vimrc}
+
+\subsection{Xmodmap}
+CtrlとCapsLockの交換，あるいはCapsLockのCtrlへの変更を行うこと．
+\lstinputlisting{../.Xmodmap}
