--- a/Tex/src/Template.tex
+++ b/Tex/src/Template.tex
@@ -7,7 +7,7 @@
 \lstinputlisting{../.emacs}
 
 \subsection{vim設定ファイル}
-%\lstinputlisting{../.vimrc}
+\lstinputlisting{../.vimrc}
 
 \subsection{Xmodmap}
 CtrlとCapsLockの交換，あるいはCapsLockのCtrlへの変更を行うこと．
