--- a/Tex/Main.tex
+++ b/Tex/Main.tex
@@ -9,15 +9,23 @@
 
 \definecolor{dkgreen}{rgb}{0,0.5,0}
 \definecolor{purple}{rgb}{0.5,0,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
+\definecolor{comcol}{rgb}{0.8,0.4,0}
 
 \lstset{
-  language={C++},
+% language={C++},
   basicstyle={\footnotesize\ttfamily},
   identifierstyle={\footnotesize},
   commentstyle={\footnotesize\itshape\color{red}},
   keywordstyle={\footnotesize\bfseries\color{blue}},
-  ndkeywordstyle={\footnotesize},
+  ndkeywordstyle={\footnotesize\bfseries\color{comcol}},
+  morekeywords={void, bool, char, int, short, long, double, auto},
+  morekeywords={vector, string, priority_queue, pair, set, map},
+  morekeywords={Data, Weight, Edge, Edges, Graph, Array, Matrix},
+  morekeywords={ld, P, L, C, VP},
+  morendkeywords={if, else, while, for, do, break, continue, return},
+  morendkeywords={operator, const, struct, class, private, public, typedef},
+  morendkeywords={using, namespace},
+  morendkeywords={REP, ALL},
   stringstyle={\footnotesize\color{purple}},
   frame={tb},
   breaklines=true,
