STLのライブラリに関する記述を追加

--- a/Tex/src/Tips.tex
+++ b/Tex/src/Tips.tex
@@ -1,3 +1,48 @@
 \section{Tips}
 
-定理
+\subsection{定理}
+
+\subsection{STL-Algorithm}
+\subsubsection{header: algorithm}
+\begin{lstlisting}[caption=辞書順比較]
+lexicographical_compare(begin(a),end(a),begin(b));
+\end{lstlisting}
+aとbを辞書順比較する。第四引数に比較関数を渡せる。
+\begin{lstlisting}[caption=最大値、最小値]
+max_element(begin(a),end(a));
+min_element(begin(a),end(a));
+minmax_element(begin(a),end(a));
+\end{lstlisting}
+最大値のイテレータ、最小値のイテレータ、そのペアをそれぞれ返す。第三引数に比較関数を渡せる。
+\begin{lstlisting}[caption=順列]
+is_permutation(begin(a),end(a),begin(b));
+\end{lstlisting}
+aがbの並べ替えになっていればtrueを返す。長さが違うことがある場合は第4引数にend(b)を渡す。最後の引数に等号比較関数を渡せる。
+\begin{lstlisting}[caption=ソート済みコンテナ操作]
+merge(begin(a),end(a),begin(b),end(b),begin(c));
+inplace_merge(begin(a),middle,end(a),begin(b));
+includes(begin(a),end(a),begin(b),end(b));
+set_difference(begin(a),end(a),begin(b),end(b),begin(c));
+set_intersection(begin(a),end(a),begin(b),end(b),begin(c));
+set_symmetric_difference(begin(a),end(a),begin(b),end(b),begin(c));
+\end{lstlisting}
+\subsubsection{header: numeric}
+\begin{lstlisting}[caption=和]
+accumlate(begin(a),end(a),0);
+\end{lstlisting}
+第三引数に初期値、第四引数に演算を渡せる
+\begin{lstlisting}[caption=累積和]
+partial_sum(begin(a),end(a),begin(s)+1);
+\end{lstlisting}
+sにはaの累積和が入る。sはaより1長いこと。
+\begin{lstlisting}[caption=階差数列]
+adjacent_difference(begin(a),end(a),begin(s));
+\end{lstlisting}
+\begin{lstlisting}[caption=内積]
+inner_product(begin(a),end(a),begin(s),0);
+\end{lstlisting}
+第四引数に初期値を渡す。第五引数に加法、第六引数に乗法に相当する演算を渡してやることもできる
+\begin{lstlisting}[caption=連続した数列]
+iota(begin(a),end(a),0);
+\end{lstlisting}
+この例だとaは[0,1,2,\ldots]となる
