add zeta mobius tex

--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -8,4 +8,8 @@
 \lstinputlisting{../Math/SquareMatrix.cpp}
 
 \subsection{高速ゼータ変換，高速メビウス変換}
+\begin{itemize}
+  \item 高速ゼータ変換 : $g(S) = \displaystyle\sum_{S \subset T} f(T)$
+  \item 高速メビウス変換 : $g(S) = \displaystyle\sum_{T \subset S} f(T)$
+\end{itemize}
 \lstinputlisting{../Math/combinatorics.cpp}
