--- a/Tex/src/Graph.tex
+++ b/Tex/src/Graph.tex
@@ -35,6 +35,9 @@ RMQバージョン
 \subsection{最短ハミルトン路}
 \lstinputlisting{../Graph/ShortestHamiltonPath.cpp}
 
+\subsection{彩色数}
+\lstinputlisting{../Graph/ChromaticNumber.cpp}
+
 \subsection{間接点}
 \lstinputlisting{../Graph/ArticulationPoints.cpp}
 
