--- a/Tex/src/Graph.tex
+++ b/Tex/src/Graph.tex
@@ -21,6 +21,12 @@ Dinic
 \lstinputlisting{../Graph/BipartiteMatching.cpp}
 
 \subsection{強連結成分分解}
+\begin{itemize}
+  \item vector<int> g[], rg[] : グラフと逆辺のグラフ．add_edge関数で作る
+  \item cmp[] : DAGのトポロジカル順序．srcから順に番号が付けられる．
+  \item scc(int) : グラフの頂点数を引数にとり，強連結成分分解を行う．返り値はDAGの頂点数．
+  \item グラフの頂点数とDAGの頂点数を引数にとり，DAGを生成する．頂点番号はcmpと同じ．
+\end{itemize}
 \lstinputlisting{../Graph/StronglyConnectedComponents.cpp}
 
 \subsection{2-SAT}
