--- a/Tex/src/Geometry.tex
+++ b/Tex/src/Geometry.tex
@@ -9,5 +9,8 @@
 \subsection{凸包}
 \lstinputlisting{../Geometry/Convex.cpp}
 
+\subsection{多角形}
+\lstinputlisting{../Geometry/Polygon.cpp}
+
 \subsection{3次元幾何}
 \lstinputlisting{../Geometry/3DGeometry.cpp}
