--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -3,6 +3,9 @@
 \subsection{基本セット}
 \lstinputlisting{../Math/Math.cpp}
 
+\subsection{Mod}
+\lstinputlisting{../Math/Mod.cpp}
+
 \subsection{行列}
 \lstinputlisting{../Math/Matrix.cpp}
 \lstinputlisting{../Math/SquareMatrix.cpp}
