--- a/Tex/src/Graph.tex
+++ b/Tex/src/Graph.tex
@@ -55,3 +55,6 @@ RMQバージョン
 
 \subsection{最小全域有向木}
 \lstinputlisting{../Graph/MinimumArborescence.cpp}
+
+\subsection{一般グラフの最小カット}
+\lstinputlisting{../Graph/GlobalMinimumCut.cpp}
