--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -10,6 +10,10 @@
 \lstinputlisting{../Math/Matrix.cpp}
 \lstinputlisting{../Math/SquareMatrix.cpp}
 
+\subsection{疎行列}
+\lstinputlisting{../Math/SparseMatrix.cpp}
+\lstinputlisting{../Math/SparseSquareMatrix.cpp}
+
 \subsection{高速ゼータ変換，高速メビウス変換}
 \begin{itemize}
   \item 高速ゼータ変換 : $g(S) = \displaystyle\sum_{S \subset T} f(T)$
