--- a/Tex/src/Others.tex
+++ b/Tex/src/Others.tex
@@ -9,6 +9,9 @@
 八面体サイコロ
 \lstinputlisting{../Others/RegularOctahedron.cpp}
 
+\subsection{ポーカー役判定・勝利判定}
+\lstinputlisting{../Others/Poker.cpp}
+
 \subsection{最長増加部分列}
 \lstinputlisting{../Others/LIS.cpp}
 
