--- a/Tex/src/Structure.tex
+++ b/Tex/src/Structure.tex
@@ -10,6 +10,8 @@
 \lstinputlisting{../Structure/SegmentTree.cpp}
 デフォルトは区間に足せる Range Sum Query．遅延伝播セグメント木である.
 \lstinputlisting{../Structure/SegmentTreeLazy.cpp}
+遅延伝播セグメント木の強いバージョン
+\lstinputlisting{../Structure/SegmentTreeLazyUniversal.cpp}
 二次元セグメント木
 \lstinputlisting{../Structure/SegmentTree2D.cpp}
 
