--- a/Tex/src/Geometry.tex
+++ b/Tex/src/Geometry.tex
@@ -12,5 +12,11 @@
 \subsection{多角形}
 \lstinputlisting{../Geometry/Polygon.cpp}
 
+\subsection{線分アレンジメント}
+\lstinputlisting{../Geometry/Arrangement.cpp}
+
+\subsection{平面グラフの双対グラフ}
+\lstinputlisting{../Geometry/DualGraph.cpp}
+
 \subsection{3次元幾何}
 \lstinputlisting{../Geometry/3DGeometry.cpp}
