--- a/Tex/src/Geometry.tex
+++ b/Tex/src/Geometry.tex
@@ -4,6 +4,7 @@
 \lstinputlisting{../Geometry/Geometry.cpp}
 
 \subsection{交点}
+tangent系は，線分ではなくて直線を求めていることに注意．(端点が接点とは限らない)
 \lstinputlisting{../Geometry/Intersect.cpp}
 
 \subsection{凸包}
