--- a/Tex/src/Structure.tex
+++ b/Tex/src/Structure.tex
@@ -25,6 +25,10 @@ FenwickTree．デフォルトは Range Sum Query であり，
 区間は閉区間で指定すること．
 \lstinputlisting{../Structure/SqrtDecomposition.cpp}
 
+\subsection{Slide-Min}
+スライド最小値．コンストラクタでスライド幅を指定すると，各クエリについて直前$w$個の最小値をO(1)で返す．
+\lstinputlisting{../Structure/SlideMin.cpp}
+
 \subsection{Treap}
 Treap．乱択アルゴリズムを用いた平衡二分木である．
 \lstinputlisting{../Structure/Treap.cpp}
