Add tips - Duality theorem

--- a/Tex/src/Others.tex
+++ b/Tex/src/Others.tex
@@ -13,7 +13,7 @@
 \lstinputlisting{../Others/Poker.cpp}
 
 \subsection{最長増加部分列}
-upper_boundにすると，最長非減少部分列を求められる．
+upperboundにすると，最長非減少部分列を求められる．
 \lstinputlisting{../Others/LIS.cpp}
 
 \subsection{出力}
