--- a/Tex/src/Tips.tex
+++ b/Tex/src/Tips.tex
@@ -1,6 +1,13 @@
 \section{Tips}
 
 \subsection{定理}
+\subsubsection{双対定理}
+\[ \min\{ \bm{c}^\top \bm{x} \, | \, \bm{A} \bm{x} = \bm{b}, \bm{x} \geq \bm{0} \}
+= \max\{ \bm{b}^\top \bm{w} \, | \, \bm{A}^\top \bm{w} \leq \bm{c} \} \]
+\[ \min\{ \bm{c}^\top \bm{x} \, | \, \bm{A} \bm{x} \geq \bm{b}, \bm{x} \geq \bm{0} \}
+= \max\{ \bm{b}^\top \bm{w} \, | \, \bm{A}^\top \bm{w} \leq \bm{c}, w \geq \bm{0} \} \]
+
+\subsubsection{ヤング図形}
 
 \subsection{STL-Algorithm}
 \subsubsection{header: algorithm}
