--- a/Tex/Main.tex
+++ b/Tex/Main.tex
@@ -7,6 +7,10 @@
 \usepackage{listings}
 \usepackage{color}
 
+\usepackage{bm}
+\usepackage{mathrsfs}
+\usepackage{amssymb}
+
 \definecolor{dkgreen}{rgb}{0,0.5,0}
 \definecolor{purple}{rgb}{0.5,0,0.5}
 \definecolor{comcol}{rgb}{0.8,0.4,0}
