--- a/Tex/src/Others.tex
+++ b/Tex/src/Others.tex
@@ -1,5 +1,9 @@
 \section{Others}
 
+\subsection{二分探索}
+チーム内で実装は統一しておいたほうがよい
+\lstinputlisting{../Others/LowerBound.cpp}
+
 \subsection{座標圧縮}
 \lstinputlisting{../Others/Compressor.cpp}
 
@@ -15,6 +19,9 @@
 \subsection{最長増加部分列}
 upperboundにすると，最長非減少部分列を求められる．
 \lstinputlisting{../Others/LIS.cpp}
+
+\subsection{最長共通部分列}
+\lstinputlisting{../Others/LCS.cpp}
 
 \subsection{出力}
 困った時は出力
