--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -14,6 +14,10 @@
 \lstinputlisting{../Math/SparseMatrix.cpp}
 \lstinputlisting{../Math/SparseSquareMatrix.cpp}
 
+\subsection{高速フーリエ変換}
+convolutionの返すvectorのサイズは，$2^n$ である．
+\lstinputlisting{../Math/FFT.cpp}
+
 \subsection{高速ゼータ変換，高速メビウス変換}
 \begin{itemize}
   \item 高速ゼータ変換 : $g(S) = \displaystyle\sum_{S \subset T} f(T)$
