--- a/Tex/src/Graph.tex
+++ b/Tex/src/Graph.tex
@@ -19,6 +19,7 @@ Dinic
 
 \subsection{二部グラフの最大マッチング}
 \lstinputlisting{../Graph/BipartiteMatching.cpp}
+\lstinputlisting{../Graph/HopcroftKarp.cpp}
 
 \subsection{強連結成分分解}
 \begin{itemize}
@@ -37,6 +38,11 @@ Dinic
 \lstinputlisting{../Graph/LCA(BinarySearch).cpp}
 RMQバージョン
 \lstinputlisting{../Graph/LCA(RMQ).cpp}
+データ構造バージョン
+\lstinputlisting{../Graph/LCA(Structure).cpp}
+
+\subsection{重軽分解}
+\lstinputlisting{../Graph/HLD.cpp}
 
 \subsection{最短ハミルトン路}
 \lstinputlisting{../Graph/ShortestHamiltonPath.cpp}
@@ -50,6 +56,9 @@ RMQバージョン
 \subsection{橋}
 \lstinputlisting{../Graph/Bridge.cpp}
 
+\subsection{オイラー路}
+\lstinputlisting{../Graph/EulerPath.cpp}
+
 \subsection{最大独立集合}
 \lstinputlisting{../Graph/MaximumIndependentSet.cpp}
 
@@ -58,3 +67,6 @@ RMQバージョン
 
 \subsection{一般グラフの最小カット}
 \lstinputlisting{../Graph/GlobalMinimumCut.cpp}
+
+\subsection{ZDD}
+\lstinputlisting{../Graph/ZDD.cpp}
