--- a/Tex/src/Math.tex
+++ b/Tex/src/Math.tex
@@ -18,6 +18,12 @@
 convolutionの返すvectorのサイズは，$2^n$ である．
 \lstinputlisting{../Math/FFT.cpp}
 
+\subsection{キタマサ法}
+\lstinputlisting{../Math/Kitamasa.cpp}
+
+\subsection{多項式}
+\lstinputlisting{../Math/Polynomial.cpp}
+
 \subsection{高速ゼータ変換，高速メビウス変換}
 \begin{itemize}
   \item 高速ゼータ変換 : $g(S) = \displaystyle\sum_{S \subset T} f(T)$
