--- a/Tex/src/Geometry.tex
+++ b/Tex/src/Geometry.tex
@@ -19,5 +19,12 @@ tangent系は，線分ではなくて直線を求めていることに注意．(
 \subsection{平面グラフの双対グラフ}
 \lstinputlisting{../Geometry/DualGraph.cpp}
 
+\subsection{角度範囲ライブラリ}
+\lstinputlisting{../Geometry/CircleRange.cpp}
+
 \subsection{3次元幾何}
 \lstinputlisting{../Geometry/3DGeometry.cpp}
+
+\subsection{ビジュアライザ}
+\lstinputlisting{../Geometry/Visualize.html}
+\lstinputlisting{../Geometry/Visualize.cpp}
