add convex hull trick

--- a/Tex/src/Structure.tex
+++ b/Tex/src/Structure.tex
@@ -31,6 +31,9 @@ FenwickTree．デフォルトは Range Sum Query であり，
 スライド最小値．コンストラクタでスライド幅を指定すると，各クエリについて直前$w$個の最小値をO(1)で返す．
 \lstinputlisting{../Structure/SlideMin.cpp}
 
+\subsection{Convex Hull Trick}
+\lstinputlisting{../Structure/ConvexHullTrick.cpp}
+
 \subsection{Skew Heap}
 meldが $O(\log N)$ でできる priority queue．
 \lstinputlisting{../Structure/SkewHeap.cpp}
