--- a/Tex/src/Graph.tex
+++ b/Tex/src/Graph.tex
@@ -23,7 +23,7 @@ Dinic
 
 \subsection{ハンガリアン法}
 \begin{itemize}
-  \item 二部正則グラフ$$K_{n,n}$$の最大重みマッチングを求める
+  \item 二部完全グラフ$K_{n,n}$の最大重みマッチングを求める
   \item \verb#m[i][j]#で左側頂点iと右側頂点jの間のコストを与える
   \item x: 左側頂点に対応する右側頂点, y: 右側頂点に対応する左側頂点
   \item 返り値は最大重みマッチングの重みの合計
